syntax = "proto3";

package mapReduce;

service MapReduce {
    rpc AssignMapTask() returns(MapTaskReply);
    rpc AssignReduceTask() returns(ReduceTaskReply);
    rpc SetMapTaskStat(SetMapTaskStatRequest) returns empty;
    rpc SetReduceTaskStat(SetReduceTaskStatRequest) returns empty;
    rpc GetMapNum() returns(GetMapNumReply);
    rpc GetReduceNum() returns(GetReduceNum);
}

message MapTaskReply {
    string MapFileName;
}

message SetMapTaskStatRequest {
    string MapFileName;
}

message ReduceTaskReply {
    int ReduceTaskIndex;
}

message SetReduceTaskStatRequest {
    int ReduceTaskIndex;
}

message GetMapNumReply {
    int mapNum;
}

message GetReduceNum {
    int reduceNum;
}